--- a/package.json
+++ b/package.json
@@ -10,31 +10,34 @@
   "author": "Brett Mason",
   "license": "GPL-2.0-or-later",
   "scripts": {
-    "start": "webpack-dev-server --config .config/webpack.config.dev.js",
+    "dev": "webpack-dev-server --config .config/webpack.config.dev.js",
     "build": "webpack --config=.config/webpack.config.prod.js",
     "lint:js": "eslint './src/**/*.js'"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@wordpress/babel-preset-default": "^3.0.1",
+    "@wordpress/browserslist-config": "^2.2.3",
     "@wordpress/eslint-plugin": "^1.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.10.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "extract-css-chunks-webpack-plugin": "^3.3.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "signal-exit": "^3.0.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-extraneous-file-cleanup-plugin": "^2.0.0",
     "webpack-manifest-plugin": "^2.0.4"
-  }
+  },
+  "browserslist": [
+    "extends @wordpress/browserslist-config"
+  ]
 }
