--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
 	"plugins": [
 		[ "transform-react-jsx", {
 			"pragma": "wp.element.createElement"
+		} ],
+		[ "@wordpress/babel-plugin-makepot", {
+			"output": "languages/hot-blocks.pot"
 		} ]
 	]
 }
