--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "@wordpress/babel-plugin-makepot": "^2.1.3",
     "@wordpress/babel-preset-default": "^3.0.1",
     "@wordpress/browserslist-config": "^2.2.3",
     "@wordpress/eslint-plugin": "^1.0.0",
@@ -26,6 +27,7 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
